--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&family=Spectral:wght@400;700&display=swap");
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 body > div {
@@ -32,11 +38,12 @@ header {
   background-color: #ffc017;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 75px;
 }
 
 header img {
-  font-size: 1rem;
+  height: 25px;
 }
 
 header div:nth-child(2) {
@@ -46,16 +53,20 @@ header div:nth-child(2) {
 }
 
 header span {
-  font-size: 1.3rem;
-  margin-right: 30px;
+  line-height: 20px;
+  font-size: 14px;
+  color: #242424;
+  margin-right: 25px;
 }
 
 header button {
+  font-size: 14px;
+  line-height: 20px;
   color: white;
   background-color: #191919;
-  border-radius: 20px;
-  border: none;
-  padding: 10px;
+  border: 1px solid #191919;
+  border-radius: 99em;
+  padding: 8px 16px;
 }
 
 #menu {
@@ -88,6 +99,7 @@ header button {
 }
 
 h1 {
+  font-family: "Spectral", serif;
   letter-spacing: -0.05em;
   line-height: 95px;
   font-size: 106px;
@@ -160,8 +172,8 @@ main > div > div {
 
 #trending h2 {
   letter-spacing: 0;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 900;
   line-height: 20px;
 }
 
@@ -177,7 +189,6 @@ main > div > div {
   align-items: flex-start;
   max-width: 33.333333%;
   flex-basis: 33.333333%;
-  padding-inline: 16px;
   font-weight: 400;
   margin-bottom: 24px;
 }
@@ -186,9 +197,12 @@ main > div > div {
   width: 40px;
   margin-right: 16px;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 600;
+  letter-spacing: -0.014em;
   color: #f2f2f2;
   line-height: 38px;
+  position: relative;
+  top: -10px;
 }
 
 .trending-element > div:nth-child(2) {
@@ -213,8 +227,39 @@ main > div > div {
   margin-left: 8px;
   height: 16px;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
   color: #242424;
+}
+
+.trending-element > div > h4 {
+  margin-bottom: 8px;
+  font-weight: 700;
+  max-height: 40px;
+  letter-spacing: 0;
+  line-height: 20px;
+  font-size: 16px;
+  color: #242424;
+}
+
+.trending-date {
+  display: flex;
+  margin-top: 2px;
+}
+
+.trending-date > span {
+  font-size: 13px;
+  color: #6b6b6b;
+  line-height: 20px;
+}
+
+.star {
+  display: inline-block;
+  font-size: 13px;
+  line-height: 20px;
+  vertical-align: middle;
+  width: 16px;
+  height: 16px;
+  padding: 0 0 0 4px;
 }
 
 /*OTHER POST*/
@@ -275,7 +320,7 @@ section > div {
 
 .post-author > h3 {
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 600;
   color: #242424;
   line-height: 16px;
   margin-left: 8px;
@@ -299,6 +344,7 @@ section > div {
   color: #6b6b6b;
   font-size: 16px;
   line-height: 20px;
+  padding-top: 4px;
 }
 
 .post-date {
@@ -334,6 +380,20 @@ span {
   font-size: 14px;
 }
 
+.post-date .star {
+  height: 20px;
+}
+
+.post-date > div:nth-child(2) {
+  margin-right: 8px;
+}
+
+.post-date > div:nth-child(2) img {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+}
+
 .post-info > div:nth-child(2) img {
   vertical-align: middle;
   width: 200px;
@@ -359,8 +419,8 @@ aside {
 
 #aside-tag > div:first-child h2 {
   letter-spacing: 0;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 900;
+  font-size: 12px;
   color: #242424;
   line-height: 20px;
 }
@@ -376,9 +436,9 @@ aside {
   margin-right: 8px;
   padding: 8px 16px;
   cursor: pointer;
-  border: none;
-  border-radius: 100px;
+  border: 1px solid lightgray;
   color: #242424;
+  background-color: transparent;
   line-height: 20px;
   font-size: 14px;
 }
@@ -391,6 +451,7 @@ aside {
   color: #1a8917;
   line-height: 20px;
   font-size: 14px;
+  font-weight: 500;
 }
 
 #aside-terms {
