--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ body > div > div {
 }
 
 /*HEADER*/
+#fixed-header {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  right: 0;
+  left: 0;
+}
 
 .header {
   background-color: #ffc017;
@@ -44,6 +51,7 @@ header {
 
 header img {
   height: 25px;
+  cursor: pointer;
 }
 
 header div:nth-child(2) {
@@ -67,11 +75,21 @@ header button {
   border: 1px solid #191919;
   border-radius: 99em;
   padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 300ms linear;
+}
+
+header button:hover {
+  background-color: black;
 }
 
 #menu {
   display: flex;
   align-items: center;
+}
+
+#menu > span {
+  cursor: pointer;
 }
 
 .hero {
@@ -124,6 +142,11 @@ h1 {
   background-color: #191919;
   border-radius: 20px;
   border: none;
+  cursor: pointer;
+}
+
+.hero button:hover {
+  background-color: black;
 }
 
 #hero-svg {
@@ -221,6 +244,7 @@ main > div > div {
   height: 20px;
   border-radius: 4px;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .trending-author > h3 {
@@ -229,6 +253,7 @@ main > div > div {
   font-size: 13px;
   font-weight: 600;
   color: #242424;
+  cursor: pointer;
 }
 
 .trending-element > div > h4 {
@@ -239,6 +264,7 @@ main > div > div {
   line-height: 20px;
   font-size: 16px;
   color: #242424;
+  cursor: pointer;
 }
 
 .trending-date {
@@ -260,6 +286,7 @@ main > div > div {
   width: 16px;
   height: 16px;
   padding: 0 0 0 4px;
+  cursor: pointer;
 }
 
 /*OTHER POST*/
@@ -316,6 +343,7 @@ section > div {
   height: 20px;
   border-radius: 50%;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .post-author > h3 {
@@ -324,10 +352,12 @@ section > div {
   color: #242424;
   line-height: 16px;
   margin-left: 8px;
+  cursor: pointer;
 }
 
 .post-content {
   padding-top: 4px;
+  cursor: pointer;
 }
 
 .post-content > h4 {
@@ -373,6 +403,7 @@ span {
   font-size: 13px;
   line-height: 20px;
   color: #6b6b6b;
+  cursor: pointer;
 }
 
 .dot {
@@ -392,6 +423,7 @@ span {
   width: 25px;
   height: 25px;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .post-info > div:nth-child(2) img {
@@ -452,6 +484,11 @@ aside {
   line-height: 20px;
   font-size: 14px;
   font-weight: 500;
+  cursor: pointer;
+}
+
+#aside-tag > div:nth-child(3) > p:hover {
+  color: black;
 }
 
 #aside-terms {
@@ -466,4 +503,5 @@ aside {
   color: #6b6b6b;
   line-height: 20px;
   font-size: 14px;
+  cursor: pointer;
 }
