--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ main > div > div {
   font-size: 32px;
   font-weight: 600;
   letter-spacing: -0.014em;
-  color: #f2f2f2;
+  color: #e7e7e7;
   line-height: 38px;
   position: relative;
   top: -10px;
